# obs-mxl-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-linux.sh  build-macos.sh
obs-mxl-input-plugin/: .gitignore  CMakeLists.txt  Info.plist  README.md  build-linux.sh  build-macos.sh  setup-obs-dev-linux.sh
obs-mxl-input-plugin/src/: mxl-source.cpp  mxl-source.h  obs-mxl-source.cpp
obs-mxl-output-plugin/: .gitignore  CMakeLists.txt  Info.plist  README.md  build-linux.sh  build-macos.sh  build.sh
obs-mxl-output-plugin/src/: mxl-config.cpp  mxl-config.h  mxl-native-dialog-macos.mm  mxl-native-dialog.cpp  mxl-native-dialog.h  mxl-output-callbacks.cpp  mxl-output.cpp  mxl-output.h  obs-mxl-output.cpp
